1999-07-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (create_signature_from_class_name): New function.
	(java_next_phase): Use it.  nextPhase is of type Object.
	(create_signature_from_object): Use it.
	(create_signature): Remove.

	* DefObject.m ([Object_s -lispIn:]): Accept _C_LNG as an array
	value type.

1999-07-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* defalloc.h: Include swarmconfig.h.  
	(getZone, getSuballocList): Use PTRUINT instead of unsigned long.

	* DefObject.h: Include swarmconfig.h.
	(setBit, getField): Use PTRUINT instead of
	unsigned. (int is smaller than void * on alphaev56-dec-osf4.0.)

	* LispArchiver.m ([LispArchiver_c -createEnd]): Set inStreamZone to
	nil when inhibitLoadFlag is set.

1999-06-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Zone.m ([Zone_c -freeIVars:]): Use getCZone macro instead of
	getComponentZone method.

	* DefObject.m ([Object_s -lispIn:]): Handle long long types.

	* internal.m (lisp_output_type): Renable long long handling,
	using -cat[Unsigned]LongLong.

	* Archiver.m ([Archiver_c -drop]): Don't drop inStreamZone.

	* Archiver.h (Archiver_c): Remove ivar inStreamZone.
	Declare -drop.

	* LispArchiver.h (LispArchiver_c): New ivar inStreamZone.

	* LispArchiver.[hm] ([LispArchiver_c -drop]): New method.

	* FArguments.m (ALLOCTYPE): New macro.
	([FArguments_c -_addArgument_:ofType:], ADD_PRIMITIVE): Use it.

1999-06-29  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_ensure_class): If corresponding objc class
	is not found create a JavaProxy object and insert it into the
	directory. 
	
	* directory.h: Declare jclass variables that store primitive
	Java types classes as extern.

	* JavaProxy.h ([-isJavaProxy]): New method used as indicator that
	object is a Java Proxy.
	
	* JavaProxy.m ([JavaProxy -isJavaProxy]): Likewise.

1999-06-29  Alex Lancaster  <alex@santafe.edu>

	* Archiver.[hm] ([Archiver_c +createBegin:]): Initialize
	variables.